# custom-cython-tokenizer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
custom_tokenizer/: custom_tokenizer.pyx
