[metadata]
version = 0.0.1
author = Adriane Boyd
author_email = adrianeboyd@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = false
python_requires = >=3.6
install_requires =
    spacy>=3.0.0,<4.0.0

[options.entry_points]
spacy_tokenizers =
    custom_tokenizer.v1 = custom_tokenizer.custom_tokenizer:custom_tokenizer_v1

[bdist_wheel]
universal = false

[sdist]
formats = gztar
